<resources>
    <string name="app_name">MyLocalization</string>
    <string name="form_data">Fill in this form to register as user</string>
    <string name="checkbox">I have read and agree the terms</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="simpan">Save</string>
    <string name="set_language">Set Language</string>
</resources>
